--- a/style.css
+++ b/style.css
@@ -2,25 +2,29 @@ body{
     height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url('background_formulario.jpg');
+    background-image: url('background4.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .box{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background-color: rgba(0, 0, 0, 0.834);
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(52, 51, 51, 0.834);
     padding: 20px;
     border-radius: 15px;
-    width: 20%;
+    width: 80%;
+    max-width: 400px;
     color: white;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
 .inputbox{
     position: relative;
+    margin-bottom: 15px;
 }
 .inputuser{
     background: none;
@@ -42,7 +46,7 @@ body{
 .inputuser:focus ~ .labelinput,.inputuser:valid ~ .labelinput{
     top: -20px;
     font-size: 12px;
-    color: #9411f2;
+    color: #cf5904;
     font-weight: 600;
 }
 
@@ -53,6 +57,8 @@ body{
     outline: none;
     font-size: 15px;
     cursor: pointer;
+    width: 100%;
+    margin-bottom: 15px;
 }
 #submit{
     background-color: white;
@@ -60,7 +66,23 @@ body{
     border: none;
     padding: 10px;
     color:black;
-    font-size: 15pxs;
+    font-size: 15px;
     cursor: pointer;
     border-radius: 10px;
 } 
+form{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+@media (max-widht: 600px){
+    .box{
+        width: 90%;
+        padding: 15px;
+    }
+    .inputuser, 
+    #data_nascimento,
+    #submit {
+        font-size: 18px;
+    }
+}
