--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     padding: 20px;
     border-radius: 15px;
     width: 80%;
+    height: 48.5rem;
     max-width: 400px;
     color: white;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -24,7 +25,7 @@ body{
 
 .inputbox{
     position: relative;
-    margin-bottom: 15px;
+    margin-bottom: 4px;
 }
 .inputuser{
     background: none;
@@ -52,13 +53,13 @@ body{
 
 #data_nascimento{
     border: none;
-    padding: 6px;
+    padding: 2px;
     border-radius: 8px;
     outline: none;
     font-size: 15px;
     cursor: pointer;
     width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 8px;
 }
 #submit{
     background-color: white;
@@ -74,6 +75,7 @@ form{
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
 }
 @media (max-widht: 600px){
     .box{
