--- a/style.css
+++ b/style.css
@@ -80,11 +80,18 @@ form{
 @media (max-widht: 600px){
     .box{
         width: 90%;
+        height: 20rem;
         padding: 15px;
     }
     .inputuser, 
     #data_nascimento,
     #submit {
         font-size: 18px;
+    }
+    form{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
     }
 }
