--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ form{
     width: 100%;
     height: 100%;
 }
-@media (max-widht: 600px){
+@media (max-width: 600px){
     .box{
         width: 90%;
         height: 20rem;
