Ajustando media query fieldset

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body{
     cursor: pointer;
     border-radius: 10px;
 } 
-form{
+fieldset{
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -89,7 +89,7 @@ form{
     #submit {
         font-size: 18px;
     }
-    form{
+    fieldset{
         display: flex;
         flex-direction: column;
         width: 100%;
