--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body {
 /* Estilos para Inputs */
 .inputbox {
     position: relative;
-    margin-bottom: 20px;  /* Margin para espaçamento */
-    width: 100%;  /* Certifique-se de que todos os elementos ocupem 100% da largura */
+    margin-bottom: 20px; 
+    width: 100%;  
 }
 
 .inputuser {
@@ -40,7 +40,7 @@ body {
     font-size: 15px;
     width: 100%;
     letter-spacing: 2px;
-    padding: 5px 0;  /* Padding interno para garantir alinhamento */
+    padding: 5px 0;  
 }
 
 .labelinput {
@@ -73,7 +73,7 @@ body {
 /* Outros Inputs */
 #data_nascimento {
     border: none;
-    padding: 5px;  /* Ajustar padding */
+    padding: 5px;  
     border-radius: 8px;
     outline: none;
     font-size: 15px;
@@ -97,9 +97,9 @@ fieldset {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: auto; /* Ajusta a altura conforme o conteúdo */
-    box-sizing: border-box; /* Inclui padding e borda no tamanho total */
-    padding: 10px; /* Adiciona padding */
+    height: auto; 
+    box-sizing: border-box; 
+    padding: 10px; 
 }
 
 /* Media Queries para Dispositivos Móveis */
@@ -107,7 +107,7 @@ fieldset {
     .box {
         width: 90%;
         padding: 15px;
-        height: auto; /* Ajusta a altura conforme o conteúdo */
+        height: auto; 
     }
 
     .inputuser,
@@ -120,6 +120,6 @@ fieldset {
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: auto; /* Ajusta a altura conforme o conteúdo */
+        height: auto; 
     }
 }
