Ajustado responsividade para dispositivos móveis

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Estilos Gerais */
 body {
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-image: url('background4.jpg');
@@ -103,7 +103,7 @@ fieldset {
 }
 
 /* Media Queries para Dispositivos Móveis */
-@media (max-width: 600px) {
+@media (max-height: 600px) {
     .box {
         width: 90%;
         padding: 15px;
